// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/SharedLinkAccessLabel should render the component with default prop values 1`] = `""`;

exports[`features/unified-share-modal/SharedLinkAccessLabel should render with enterprise name when handling people in company 1`] = `
<FormattedMessage
  defaultMessage="People in {enterpriseName}"
  id="boxui.unifiedShare.peopleInEnterpriseName"
  values={
    Object {
      "enterpriseName": "Box",
    }
  }
/>
`;

exports[`features/unified-share-modal/SharedLinkAccessLabel should render without enterprise name when handling people in company 1`] = `
<FormattedMessage
  defaultMessage="People in your company"
  id="boxui.unifiedShare.peopleInYourCompany"
  values={
    Object {
      "enterpriseName": "",
    }
  }
/>
`;

exports[`features/unified-share-modal/SharedLinkAccessLabel should respect item type folder when handling people in the file 1`] = `
<FormattedMessage
  defaultMessage="Invited people only"
  id="boxui.unifiedShare.peopleInThisFile"
  values={
    Object {
      "enterpriseName": "ABC, Inc.",
    }
  }
/>
`;

exports[`features/unified-share-modal/SharedLinkAccessLabel should respect item type folder when handling people in the folder 1`] = `
<FormattedMessage
  defaultMessage="Invited people only"
  id="boxui.unifiedShare.peopleInThisFolder"
  values={
    Object {
      "enterpriseName": "ABC, Inc.",
    }
  }
/>
`;

exports[`features/unified-share-modal/SharedLinkAccessLabel should respect the access level when a description is applied 1`] = `
<span>
  <strong>
    <FormattedMessage
      defaultMessage="People in {enterpriseName}"
      id="boxui.unifiedShare.peopleInEnterpriseName"
      values={
        Object {
          "enterpriseName": "ABC, Inc.",
        }
      }
    />
  </strong>
  <SharedLinkAccessDescription
    accessLevel="peopleInYourCompany"
    enterpriseName="ABC, Inc."
    itemType="file"
  />
</span>
`;

exports[`features/unified-share-modal/SharedLinkAccessLabel should respect the access level when a description is applied 2`] = `
<span>
  <strong>
    <FormattedMessage
      defaultMessage="People with the link"
      id="boxui.unifiedShare.peopleWithTheLinkText"
      values={
        Object {
          "enterpriseName": "ABC, Inc.",
        }
      }
    />
  </strong>
  <SharedLinkAccessDescription
    accessLevel="peopleWithTheLink"
    enterpriseName="ABC, Inc."
    itemType="file"
  />
</span>
`;

exports[`features/unified-share-modal/SharedLinkAccessLabel should respect the access level when a description is applied 3`] = `
<span>
  <strong>
    <FormattedMessage
      defaultMessage="Invited people only"
      id="boxui.unifiedShare.peopleInThisFile"
      values={
        Object {
          "enterpriseName": "ABC, Inc.",
        }
      }
    />
  </strong>
  <SharedLinkAccessDescription
    accessLevel="peopleInThisItem"
    enterpriseName="ABC, Inc."
    itemType="file"
  />
</span>
`;

exports[`features/unified-share-modal/SharedLinkAccessLabel should respect the access level when there is no description applied 1`] = `
<FormattedMessage
  defaultMessage="People in {enterpriseName}"
  id="boxui.unifiedShare.peopleInEnterpriseName"
  values={
    Object {
      "enterpriseName": "ABC, Inc.",
    }
  }
/>
`;

exports[`features/unified-share-modal/SharedLinkAccessLabel should respect the access level when there is no description applied 2`] = `
<FormattedMessage
  defaultMessage="People with the link"
  id="boxui.unifiedShare.peopleWithTheLinkText"
  values={
    Object {
      "enterpriseName": "ABC, Inc.",
    }
  }
/>
`;

exports[`features/unified-share-modal/SharedLinkAccessLabel should respect the access level when there is no description applied 3`] = `
<FormattedMessage
  defaultMessage="Invited people only"
  id="boxui.unifiedShare.peopleInThisFile"
  values={
    Object {
      "enterpriseName": "ABC, Inc.",
    }
  }
/>
`;
